name:                passgen
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/ThomasLocke/passgen#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Løcke
maintainer:          thomas@responsum.dk
copyright:           (c) 2016- Thomas Løcke
category:            Password
build-type:          Simple
cabal-version:       >=1.10

executable passgen
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random
