name:                passgen
version:             0.0.8
synopsis:            Simple password generator. Not cryptographically safe.
description:         Please see README.md
homepage:            http://github.com/ThomasLocke/passgen#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Løcke
maintainer:          thomas@monadic.dk
copyright:           (c) 2016- Thomas Løcke
category:            Password
build-type:          Simple
cabal-version:       >=1.10

executable passgen
  main-is:             Passgen.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parseargs >= 0.2 && < 1,
                       MonadRandom >= 0.4.2.2 && < 5
  ghc-options:         -Wall
